# DATS_Processing

./: .gitignore  README.md  verification_reconciliation_report.md
architecture/: 01_Decision_Log.md  02_Shared_Contracts.md  03_Message_Bus_Design.md  04_MuST_System_Architecture.md
artifacts/: verification_reconciliation_report.md
ccsds-decoder/: Cargo.toml  build.rs
ccsds-decoder/docs/: 01_SRS.md  02_Architecture.md  03_Sequence.md  04_Deployment.md
ccsds-decoder/scripts/: smoke_test.sh
ccsds-decoder/src/: config.rs  main.rs  proto.rs
ccsds-decoder/src/adapters/: mod.rs
ccsds-decoder/src/adapters/inbound/: deserializer.rs  mod.rs  rabbitmq_consumer.rs
ccsds-decoder/src/adapters/outbound/: console_sink.rs  rabbitmq_publisher.rs
ccsds-decoder/src/application/: orchestrator.rs
ccsds-decoder/src/domain/: ccsds_hdr.rs  continuity.rs  errors.rs  mod.rs  parser.rs  validator.rs
ccsds-decoder/src/ports/: mod.rs
ccsds-decoder/src/ports/inbound/: mod.rs
ccsds-decoder/src/ports/outbound/: mod.rs
ccsds-decoder/tools/: consume_decoded_envelope.rs  publish_test_envelope.rs
engineering-conversion-service/: Cargo.toml  Dockerfile
engineering-conversion-service/docs/: 01_Vision_and_Requirements.md  02_Architecture.md  03_Contracts_and_DataFlow.md  04_Operations_and_Testing.md
engineering-conversion-service/scripts/: smoke_test.sh
engineering-conversion-service/src/: config.rs  main.rs  proto.rs
engineering-conversion-service/src/adapters/inbound/: mod.rs  rabbitmq_consumer.rs
engineering-conversion-service/src/adapters/outbound/: console_sink.rs  mod.rs  rabbitmq_publisher.rs
engineering-conversion-service/src/application/: orchestrator.rs
engineering-conversion-service/src/domain/: computation.rs  errors.rs  mod.rs  models.rs  registry.rs
engineering-conversion-service/src/ports/: inbound.rs  outbound.rs
engineering-conversion-service/tools/: consume_engineering_envelope.rs  publish_decommutated_envelope.rs  verification_sink.rs
mission-identification-service/: Cargo.toml  Dockerfile
mission-identification-service/configs/: registry.yaml
mission-identification-service/docs/: 01_Vision_and_Requirements.md  02_Architecture.md  03_Contracts_and_DataFlow.md  04_Operations_and_Testing.md
mission-identification-service/scripts/: smoke_test.sh
mission-identification-service/src/: config.rs  main.rs  proto.rs
mission-identification-service/src/adapters/inbound/: rabbitmq_consumer.rs
mission-identification-service/src/adapters/outbound/: logging_alert.rs  mod.rs  rabbitmq_publisher.rs
mission-identification-service/src/application/: orchestrator.rs
mission-identification-service/src/domain/: errors.rs  lookup.rs  mod.rs  models.rs  registry.rs
mission-identification-service/src/ports/inbound/: mod.rs
mission-identification-service/src/ports/outbound/: mod.rs
mission-identification-service/tools/: consume_identified_envelope.rs  publish_decoded_envelope.rs
simulator-engine/: Cargo.toml  README.md  build.rs
simulator-engine/configs/: default.yaml
simulator-engine/docs/: 01_SRS.md  02_Architecture.md  03_API.md  04_Sequence.md  05_StateMachine.md  06_Deployment.md  07_TestPlan.md  08_Acceptance.md
simulator-ui/: index.html  package-lock.json  package.json
telemetry-gateway/: Cargo.toml  README.md  build.rs
telemetry-gateway/docs/: 01_SRS.md  02_Architecture.md  03_API.md  03_State_Machine.md  04_Error_Handling.md  04_Sequence.md  05_StateMachine.md  06_Deployment.md  07_TestPlan.md  08_Acceptance.md
telemetry-gateway/src/: api.rs  main.rs
telemetry-gateway/src/adapters/inbound/grpc/: mod.rs  replay_receiver.rs
telemetry-gateway/src/adapters/outbound/rabbitmq/: publisher.rs
telemetry-gateway/src/application/: orchestrator.rs
telemetry-gateway/src/domain/: enricher.rs  errors.rs  events.rs  mod.rs  models.rs  normalizer.rs  router.rs  validator.rs
telemetry-gateway/src/ports/inbound/: control_port.rs  ingest_port.rs  mod.rs
telemetry-gateway/src/ports/outbound/: event_port.rs  mod.rs  publish_port.rs
verification-suite/: dataset_generator.py  run_verification.py
xtce-decoder/: Cargo.toml  build.rs
xtce-decoder/docs/: 01_Vision_and_Requirements.md  02_Architecture_and_Design.md  03_Contracts_and_DataFlow.md  04_Operations_and_Testing.md
xtce-decoder/src/: config.rs  main.rs  orchestrator.rs  proto.rs
xtce-decoder/src/adapters/inbound/: mod.rs  rabbitmq_consumer.rs
xtce-decoder/src/adapters/outbound/: console_sink.rs  mod.rs  rabbitmq_publisher.rs
xtce-decoder/src/domain/: calibration.rs  decommutation.rs  errors.rs  mod.rs  models.rs  registry.rs
xtce-decoder/src/ports/: inbound.rs  mod.rs  outbound.rs
xtce_db/: cy3.xml
(+45 files in other folders)
