[package]
name = "telemetry-gateway"
version = "1.0.0"
edition = "2021"

[dependencies]
# Concurrency and Async
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

# Serialization & Protocols
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# API & Web
axum = "0.7"
tonic = "0.11"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Message Bus (RabbitMQ)
lapin = "2.3"
amq-protocol = "7.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[build-dependencies]
tonic-build = "0.11"
