[package]
name = "xtce-decoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtce-decoder"
path = "src/main.rs"

[dependencies]
# Concurrency and Async
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & Protocols
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
prost = "0.12"
uuid = { version = "1.8", features = ["v4"] }

# Message Bus (RabbitMQ)
lapin = "2.3"
amq-protocol = "7.0"

# XML Parsing
roxmltree = "0.19"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["process"] }

# Error handling
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.11"
